--- a/build.gradle
+++ b/build.gradle
@@ -35,9 +35,7 @@ dependencies {
     compile("io.qameta.allure:allure-selenide:$allureVersion",
             "com.codeborne:selenide:$selenideVersion",
             "org.aspectj:aspectjweaver:1.9.6",
-            "io.rest-assured:rest-assured:4.3.1",
             "io.qameta.allure:allure-java-commons:$allureVersion",
-            "io.qameta.allure:allure-rest-assured:$allureVersion",
             "org.junit.jupiter:junit-jupiter-api:$junitVersion",
             "org.junit.jupiter:junit-jupiter-params:$junitVersion",
             "org.aeonbits.owner:owner:1.0.4",
@@ -59,7 +57,7 @@ tasks.withType(Test) {
 
 task sendAllureResults(type: JavaExec) {
     classpath = sourceSets.main.runtimeClasspath
-    main = 'core.notifications.Sender'
+    main = 'com.tricentis.demowebshop.notifications.Sender'
     systemProperty "jenkins.build.number", System.getProperty("jenkins.build.number")
     systemProperty "jenkins.build.url", System.getProperty("jenkins.build.url")
     systemProperty "jenkins.job.url", System.getProperty("jenkins.job.url")
@@ -68,11 +66,5 @@ task sendAllureResults(type: JavaExec) {
 task runWebTests(type: Test) {
     useJUnitPlatform {
         includeTags 'web'
-    }
-}
-
-task runApiTests(type: Test) {
-    useJUnitPlatform {
-        includeTags 'api'
     }
 }
