Add allure file for README

--- a/src/main/resources/dev.properties
+++ b/src/main/resources/dev.properties
@@ -3,5 +3,5 @@ browser.name=chrome
 browser.version=87
 remote.driver.user=user1
 remote.driver.password=1234
-browser.instantiation.type=local
+browser.instantiation.type=remote
 selenoid.url=selenoid.autotests.cloud
